# src/main/java/com/example/Homebank/presentation/dto/composite/CustomerWithTransactionHeadAndRowDTO.java
@@ -1,7 +1,7 @@
 package com.example.Homebank.presentation.dto.composite;
 
 import com.example.Homebank.presentation.dto.transactionhead.TransactionHeadDTO;
-import com.example.Homebank.presentation.dto.transactionhead.TransactionRowDTO;
+import com.example.Homebank.presentation.dto.transactionrow.TransactionRowDTO;
 import com.example.Homebank.presentation.dto.customer.CustomerDTO;
 import jakarta.validation.constraints.NotNull;
 
